network/network_policy/allow_external_network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-network
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 100.64.0.0/10
    - ipBlock:
        cidr: 100.111.103.1/24

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 100.64.0.0/10
    - ipBlock:
        cidr: 100.111.103.1/24
