network/network_policy/allow_external_network_egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-network-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    # - namespaceSelector:
    #     matchLabels:
    #       kubernetes.io/metadata.name: network-test1
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 100.64.0.0/16
