network/network_policy/allow_external_network_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-network-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    # - namespaceSelector:
    #     matchLabels:
    #       kubernetes.io/metadata.name: network-control
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 100.64.0.0/16
